update for level2 ca2

--- a/aa-completed/radio-select-image-v1/index.html
+++ b/aa-completed/radio-select-image-v1/index.html
@@ -20,7 +20,23 @@
         <label for="tab2"></label>
         <label for="tab3"></label>
       </div>
+
+      <!-- tab-inner 안에 이미지 추가 -->
+      <div class="content slide1">
+        <img src="images/slide-11.jpg" alt="" />
+      </div>
+
+      <div class="content slide2">
+        <img src="images/slide-22.jpg" alt="" />
+      </div>
+
+      <div class="content slide3">
+        <img src="images/slide-33.jpg" alt="" />
+      </div>
+
     </div>
     
+
+
   </body>
 </html>
