--- a/radio-select-image-v3/index.html
+++ b/radio-select-image-v3/index.html
@@ -21,6 +21,7 @@
         <label for="tab3"></label>
       </div>
 
+      <!-- tab-inner 안에 이미지 추가 -->
       <div class="content slide1">
         <img src="images/slide-11.jpg" alt="" />
       </div>
@@ -33,8 +34,13 @@
         <img src="images/slide-33.jpg" alt="" />
       </div>
 
-    </div>
+      <div class="heading">
+        <div class="text1">Sale<span>40%</span></div>
+        <div class="text2">Sale<span>20%</span></div>
+        <div class="text3">Sale<span>60%</span></div>
+      </div>
 
+    </div>
 
   </body>
 </html>
